versioned_docs/version-3.26.0/getting-started/installation-action.mdx
---
title: "Installation Reviewpad as a GitHub action"
id: "installation-action"
slug: "installation-action"
---

import CodeBlock from "@theme/CodeBlock";
import LabelSizeConfiguration from "!!raw-loader!../use-cases/automated-labelling/label-with-size/example.yml";

:::info

**To get the most out of Reviewpad we advise you to [install Reviewpad as a GitHub App](/getting-started/installation).**
This will allow you to access all Reviewpad features.

If you are not able to install the Reviewpad GitHub App, please continue with this installation.
:::

:::caution

If you are not able to [install Reviewpad as GitHub App](/getting-started/installation), we suggest to [install Reviewpad as a GitHub action with a GitHub token](/getting-started/installation-action-tokenized) instead.

**Please be aware that installing Reviewpad as a GitHub action without a GitHub token will limit the action execution to PUBLIC REPOSITORIES ONLY.**

Also, you will not be able to use the following built-ins:
- [team](/guides/built-ins#team)
- [merge](/guides/built-ins#merge)
- [setProjectField](/guides/built-ins#setprojectfield)
:::

You can install Reviewpad as a GitHub action :zap:

**Reviewpad runs as a GitHub action** at the level of a single GitHub repository, which means that you need to install Reviewpad for each repository where you wish to run it.

To install Reviewpad on a repository, please follow the following steps.

## Step 1. Open the GitHub project on your IDE

Open the GitHub project where you wish to install Reviewpad.

Use your IDE for this since we will be adding new files to the project.

## Step 2. Add `Reviewpad Action` workflow file

At the root of your repository navigate to `.github > workflows` (this is where your project's GitHub actions live; if you don't have these folders, please create them).

Add the file `reviewpad.yml` and copy the following content:

```yaml
name: Reviewpad Action

on:
    - issues
    - pull_request

jobs:
  reviewpad:
    runs-on: ubuntu-latest
    steps:
      - name: Reviewpad
        uses: reviewpad/action@v3.x
```

![Reviewpad action installation - Step 2](/img/installation-action/step2.gif)

## Step 3. Add `reviewpad.yml` to the root of your repository

In order for Reviewpad to run, you need to add a file named `reviewpad.yml` to the root of your repository.

This file contains the configuration for Reviewpad.

Let's add a simple Reviewpad configuration. You can change it later on :muscle:

On the root of your repository create the `reviewpad.yml` file and copy the following content:

<CodeBlock language="yml" title="reviewpad.yml">{LabelSizeConfiguration}</CodeBlock>

![Reviewpad action installation - Step 3](/img/installation-action/step3.gif)

This particular configuration will label every pull requests based on their size.

That's it! :tada:

**Don't forget to commit and push the `reviewpad.yml` file to your repository.**

Reviewpad will run on every pull request and follow the configuration you have set.

## Bonus: Checkout Reviewpad use cases

You can do much more with Reviewpad.

Start by looking at some of Reviewpad [use cases](/use-cases) or jump right into the available [built-ins](/guides/built-ins).

:::info Terms and Conditions

By running Reviewpad, you are agreeing with [Reviewpad's Terms and Conditions](https://reviewpad.com/terms-and-conditions/).
:::
